# pptx-voice-video

./: .env.example  .gitignore  LICENSE  PUBLICATION_CHECKLIST.md  README.md  THIRD_PARTY_NOTICES.md  example_config.yaml  pyproject.toml  requirements.txt
docs/: pptx_upload_requirements.md
examples/: slide_audio_overrides.yaml
src/pptx_voice_video/: aspect.py  audio_match.py  audio_qc.py  audio_utils.py  cache.py  cli.py  config.py  doctor.py  models.py  notes_extractor.py  notes_qc.py  overrides.py  pipeline.py  pointer.py  pronunciation.py  recorded_audio_qc.py  retime.py  subtitles.py  text_normalizer.py  ui.py  video_compose.py
src/pptx_voice_video/renderer/: __init__.py  base.py  libreoffice.py
src/pptx_voice_video/tts/: __init__.py  base.py  voxcpm.py
tests/: test_aspect.py  test_audio_match.py  test_audio_qc.py  test_cache.py  test_notes.py  test_notes_qc.py  test_overrides.py  test_pointer.py  test_pronunciation.py  test_retime.py  test_subtitles.py  test_text.py  test_video_compose.py  test_voxcpm_backend.py
tools/: render_10_slide_pointer_smoke.py
tools/wormhole_web_recv/: README.md  app.py  requirements.txt
tools/wormhole_web_recv/tests/: test_security.py
